<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.and1exam.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.and1exam.ui.list.ListFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.and1exam.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_slideshow_to_nav_login"
            app:destination="@id/nav_login" />
    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.and1exam.ui.login.LoginFragment"
        android:label="LOGIN"
        tools:layout="@layout/login_fragment" >
        <action
            android:id="@+id/action_nav_login_to_nav_register"
            app:destination="@id/nav_register" />
        <action
            android:id="@+id/action_nav_login_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.and1exam.ui.register.RegisterFragment"
        android:label="REGISTER"
        tools:layout="@layout/register_fragment" >
        <action
            android:id="@+id/action_nav_register_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>


</navigation>