<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="100dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_email"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/profile_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="EMAIL"
                    android:textSize="18sp"/>

            </LinearLayout>

            <Button
                android:id="@+id/profile_log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:text="@string/profile_logout_button" />

            <Button
                android:id="@+id/profile_delete_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/Red"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:text="@string/profile_delete_account_button" />


            <EditText
                android:id="@+id/profile_delete_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="100dp"
                android:layout_gravity="center"
                android:hint="Password"
                android:textSize="18sp"
                android:visibility="invisible"
                android:inputType="textAutoComplete" />

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>